--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>KobacHub – Coming Soon</title>
+    <title>DifaacSec – Coming Soon</title>
     <link rel="icon" href="logo.svg" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Playfair+Display:wght@700&display=swap"
@@ -125,7 +125,7 @@
           class="text-gray-100/80 text-sm sm:text-base font-light text-center max-w-xl animate-fadein-up-delay"
           style="animation-delay: 0.6s"
         >
-          KobacHub trains Somali youth in
+          DifaacSec trains Somali youth in
           <span class="text-sky-300 font-medium">cybersecurity</span>,
           <span class="text-sky-300 font-medium">Linux</span>,
           <span class="text-sky-300 font-medium">cloud</span>, and more for real
@@ -250,3 +250,4 @@
     </script>
   </body>
 </html>
+
