--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GuardAura – Coming Soon</title>
-    <link rel="icon" href="icon.png" type="image/png" />
+    <title>DifaacSec</title>
+    <link rel="icon" href="logo.svg" type="image/png" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -71,19 +71,19 @@
       <div class="mb-10">
         <span class="inline-block text-base md:text-lg font-bold bg-white/20 text-white backdrop-blur-md rounded-2xl px-5 py-2.5 shadow-lg border border-white/10 tracking-tight"
               style="width: fit-content;">
-          GuardAura is coming soon!🛠️
+          KobacHub is now Difaacsec!🛠️
         </span>
       </div>
 <!-- ...existing code... -->
       <!-- Headline -->
       <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center leading-tight mb-6">
-        Good things<br class="sm:hidden" />
-        <span class="text-white">come</span>
-        <span class="block font-normal italic text-[#D1FAE3]">to those who wait.</span>
+        Master Tech Skills<br class="sm:hidden" />
+        <span class="text-white">That</span>
+        <span class="block font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
       </h1>
       <!-- Subheadline -->
       <p class="text-gray-300 text-base md:text-lg text-center mb-8 max-w-md mx-auto">
-        We’re working hard to bring you simple, strong cybersecurity solutions. Stay tuned!
+        Hands-on Cybersecurity and Cloud training by <a href"https://abdisamadjoe.com/">Abdisamad Yusuf</a>
       </p>
       <!-- Email Form -->
       <form 
@@ -112,3 +112,4 @@
     </div>
   </body>
 </html>
+
