--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 <!-- ...existing code... -->
       <!-- Headline -->
       <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center leading-tight mb-6">
-        Master Tech Skills<br class="sm:hidden" />
-        <span class="text-white">That</span>
+        Master Tech Skills That<br class="sm:hidden" />
         <span class="block font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
       </h1>
       <!-- Subheadline -->
@@ -112,5 +111,6 @@
     </div>
   </body>
 </html>
+
 
 
