--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!-- ...existing code... -->
       <!-- Headline -->
       <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center leading-tight mb-6">
-        Master Tech Skills That<br class="sm:hidden" />
+        Master Tech Skills That
         <span class="block font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
       </h1>
       <!-- Subheadline -->
@@ -111,6 +111,7 @@
     </div>
   </body>
 </html>
+
 
 
 
