--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         theme: {
           extend: {
             fontFamily: { inter: ['Inter', 'sans-serif'] },
-            colors: {
-              grayish: '#D1FAE3',
-            },
+            colors: { grayish: '#D1FAE3' },
             keyframes: {
               float1: {
                 '0%, 100%': { transform: 'translateY(0) scale(1)' },
@@ -50,13 +48,11 @@
   <body class="relative min-h-screen flex items-center justify-center bg-gradient-to-b from-[#022C20] via-[#022C20] to-[#04AD70] text-white overflow-hidden">
     <!-- Animated Floating Elements -->
     <div class="pointer-events-none absolute inset-0 z-0">
-      <!-- Blurred dots -->
       <div class="absolute top-10 left-10 w-16 h-16 bg-[#04AD70]/30 rounded-full blur-2xl animate-float1"></div>
       <div class="absolute bottom-20 right-16 w-20 h-20 bg-[#D1FAE3]/20 rounded-full blur-2xl animate-float2"></div>
       <div class="absolute top-1/2 left-1/2 w-10 h-10 bg-[#04AD70]/20 rounded-full blur-xl animate-float3"></div>
       <div class="absolute bottom-10 left-1/4 w-8 h-8 bg-[#D1FAE3]/30 rounded-full blur-xl animate-float2"></div>
       <div class="absolute top-1/4 right-1/3 w-12 h-12 bg-[#04AD70]/20 rounded-full blur-2xl animate-float1"></div>
-      <!-- Sparkle stars -->
       <div class="absolute top-16 right-1/2 w-1.5 h-1.5 bg-white rounded-full opacity-80 animate-twinkle"></div>
       <div class="absolute bottom-32 left-1/3 w-1 h-1 bg-white rounded-full opacity-60 animate-twinkle"></div>
       <div class="absolute top-1/3 left-1/4 w-1.5 h-1.5 bg-[#D1FAE3] rounded-full opacity-70 animate-twinkle"></div>
@@ -66,52 +62,37 @@
 
     <!-- Main Content -->
     <div class="relative z-10 flex flex-col items-center justify-center w-full max-w-lg mx-auto px-6 py-10 bg-transparent">
-   <!-- ...existing code... -->
       <!-- Tagline Badge -->
       <div class="mb-10">
-        <span class="inline-block text-base md:text-lg font-bold bg-white/20 text-white backdrop-blur-md rounded-2xl px-5 py-2.5 shadow-lg border border-white/10 tracking-tight"
-              style="width: fit-content;">
-          KobacHub is now Difaacsec!🛠️
+        <span class="inline-block text-base md:text-lg font-bold bg-white/20 text-white backdrop-blur-md rounded-2xl px-5 py-2.5 shadow-lg border border-white/10 tracking-tight">
+          KobacHub is now Difaacsec! 🛠️
         </span>
       </div>
-<!-- ...existing code... -->
+
       <!-- Headline -->
       <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center leading-tight mb-6">
-        Master Tech Skills That
+        Master Tech Skills<br class="sm:hidden" />
+        <span class="text-white">That</span>
         <span class="block font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
       </h1>
-      <!-- Subheadline -->
-      <p class="text-gray-300 text-base md:text-lg text-center mb-8 max-w-md mx-auto">
-        Hands-on Cybersecurity and Cloud training by <a href"https://abdisamadjoe.com/">Abdisamad Yusuf</a>
-      </p>
-      <!-- Email Form -->
-      <form 
-        action="https://formsubmit.co/ff29d5d343cddb5ba4c1b6c3a90964f0" 
-        method="POST"
-        class="w-full flex flex-col sm:flex-row items-center justify-center gap-4"
-        onsubmit="this.querySelector('.thanks').classList.remove('hidden'); this.querySelector('button').disabled=true; return false;"
-      >
-        <input 
-          type="email" 
-          name="email" 
-          required 
-          placeholder="Your Email Address"
-          class="flex-1 px-4 py-3 rounded-xl shadow bg-white/90 text-[#022C20] placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-[#04AD70] transition"
-        />
-        <button 
-          type="submit"
-          class="px-6 py-3 rounded-xl bg-[#04AD70] text-white font-semibold shadow hover:bg-[#06c780] transition w-full sm:w-auto"
-        >
-          Get Notified
-        </button>
 
-        <!-- Prevent captcha page -->
-        <input type="hidden" name="_captcha" value="false">
-      </form>
+      <!-- Subheadline -->
+      <p class="text-gray-300 text-base md:text-lg text-center mb-10 max-w-md mx-auto">
+        Hands-on Cybersecurity and Cloud training by 
+        <a href="https://abdisamadjoe.com/" class="underline text-[#D1FAE3] hover:text-white transition">Abdisamad Yusuf</a>
+      </p>
+
+      <!-- Buttons -->
+      <div class="flex flex-col sm:flex-row gap-4 justify-center">
+        <a href="https://www.udemy.com/course/linux-fundamentals-somali/learn/" target="_blank"
+           class="px-6 py-3 rounded-xl bg-[#04AD70] text-white font-semibold shadow hover:bg-[#06c780] transition text-center">
+          Start the Course
+        </a>
+        <a href="https://difaacsec.abdisamadjoe.com" target="_blank"
+           class="px-6 py-3 rounded-xl bg-white/20 text-white font-semibold shadow hover:bg-white/30 transition text-center">
+          Visit the New Difaacsec Site
+        </a>
+      </div>
     </div>
   </body>
 </html>
-
-
-
-
