--- a/index.html
+++ b/index.html
@@ -69,12 +69,10 @@
         </span>
       </div>
 
-      <!-- Headline -->
-      <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center leading-tight mb-6">
-        Master Tech Skills<br class="sm:hidden" />
-        <span class="text-white">That</span>
-        <span class="block font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
-      </h1>
+    <!-- Headline -->
+<h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center leading-tight mb-6">
+  Master Tech Skills That <span class="font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
+</h1>
 
       <!-- Subheadline -->
       <p class="text-gray-300 text-base md:text-lg text-center mb-10 max-w-md mx-auto">
@@ -96,3 +94,4 @@
     </div>
   </body>
 </html>
+
