--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <!-- Headline -->
 <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center leading-tight mb-6">
-  Master Tech Skills That <br> <span class="font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
+  Master Tech Skills That <span class="font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
 </h1>
 
       <!-- Subheadline -->
@@ -94,5 +94,6 @@
     </div>
   </body>
 </html>
+
 
 
