--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
         </span>
       </div>
 
-    <!-- Headline -->
-<h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center leading-tight mb-6">
+ <!-- Headline -->
+<h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold text-center leading-snug md:leading-tight mb-6 max-w-3xl mx-auto">
   Master Tech Skills That<br />
   <span class="font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
 </h1>
+
 
       <!-- Subheadline -->
       <p class="text-gray-300 text-base md:text-lg text-center mb-10 max-w-md mx-auto">
@@ -95,6 +96,7 @@
     </div>
   </body>
 </html>
+
 
 
 
