--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
 
 <!-- Headline -->
-<h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center leading-tight mb-6">
+<h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center mb-6">
   <span class="block">Master Tech Skills That</span>
   <span class="block font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
 </h1>
@@ -85,7 +85,7 @@
 
       <!-- Buttons -->
       <div class="flex flex-col sm:flex-row gap-4 justify-center">
-        <a href="https://www.udemy.com/course/linux-fundamentals-somali/learn/" target="_blank"
+        <a href="https://www.udemy.com/course/linux-fundamentals-somali/" target="_blank"
            class="px-6 py-3 rounded-xl bg-[#04AD70] text-white font-semibold shadow hover:bg-[#06c780] transition text-center">
           Start the Course
         </a>
@@ -97,6 +97,7 @@
     </div>
   </body>
 </html>
+
 
 
 
