--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <!-- Main Content -->
-    <div class="relative z-10 flex flex-col items-center justify-center w-full max-w-lg mx-auto px-6 py-10 bg-transparent">
+    <div class="relative z-10 flex flex-col items-center justify-center w-full max-w-3xl mx-auto px-6 py-10 bg-transparent">
       <!-- Tagline Badge -->
       <div class="mb-10">
         <span class="inline-block text-base md:text-lg font-bold bg-white/20 text-white backdrop-blur-md rounded-2xl px-5 py-2.5 shadow-lg border border-white/10 tracking-tight">
@@ -70,7 +70,7 @@
       </div>
 
 <!-- Headline -->
-<h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center mb-6">
+<h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center leading-tight mb-6">
   <span class="block">Master Tech Skills That</span>
   <span class="block font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
 </h1>
