--- a/index.html
+++ b/index.html
@@ -14,22 +14,10 @@
             fontFamily: { inter: ['Inter', 'sans-serif'] },
             colors: { grayish: '#D1FAE3' },
             keyframes: {
-              float1: {
-                '0%, 100%': { transform: 'translateY(0) scale(1)' },
-                '50%': { transform: 'translateY(-18px) scale(1.08)' },
-              },
-              float2: {
-                '0%, 100%': { transform: 'translateY(0) scale(1)' },
-                '50%': { transform: 'translateY(22px) scale(1.04)' },
-              },
-              float3: {
-                '0%, 100%': { transform: 'translateX(0) scale(1)' },
-                '50%': { transform: 'translateX(18px) scale(1.07)' },
-              },
-              twinkle: {
-                '0%, 100%': { opacity: '0.7' },
-                '50%': { opacity: '1' },
-              },
+              float1: { '0%,100%': { transform: 'translateY(0) scale(1)' }, '50%': { transform: 'translateY(-18px) scale(1.08)' } },
+              float2: { '0%,100%': { transform: 'translateY(0) scale(1)' }, '50%': { transform: 'translateY(22px) scale(1.04)' } },
+              float3: { '0%,100%': { transform: 'translateX(0) scale(1)' }, '50%': { transform: 'translateX(18px) scale(1.07)' } },
+              twinkle: { '0%,100%': { opacity: '0.7' }, '50%': { opacity: '1' } },
             },
             animation: {
               float1: 'float1 7s ease-in-out infinite',
@@ -46,7 +34,8 @@
     </style>
   </head>
   <body class="relative min-h-screen flex items-center justify-center bg-gradient-to-b from-[#022C20] via-[#022C20] to-[#04AD70] text-white overflow-hidden">
-    <!-- Animated Floating Elements -->
+    
+    <!-- Floating Animation Elements -->
     <div class="pointer-events-none absolute inset-0 z-0">
       <div class="absolute top-10 left-10 w-16 h-16 bg-[#04AD70]/30 rounded-full blur-2xl animate-float1"></div>
       <div class="absolute bottom-20 right-16 w-20 h-20 bg-[#D1FAE3]/20 rounded-full blur-2xl animate-float2"></div>
@@ -61,21 +50,20 @@
     </div>
 
     <!-- Main Content -->
-    <div class="relative z-10 flex flex-col items-center justify-center w-full max-w-3xl mx-auto px-6 py-10 bg-transparent">
+    <div class="relative z-10 flex flex-col items-center justify-center w-full max-w-3xl mx-auto px-6 py-16 sm:py-24 bg-transparent">
+      
       <!-- Tagline Badge -->
-      <div class="mb-10">
-        <span class="inline-block text-base md:text-lg font-bold bg-white/20 text-white backdrop-blur-md rounded-2xl px-5 py-2.5 shadow-lg border border-white/10 tracking-tight">
+      <div class="mb-8 sm:mb-10">
+        <span class="inline-block text-sm sm:text-base md:text-lg font-semibold bg-white/15 text-white backdrop-blur-md rounded-2xl px-4 py-2 shadow-md border border-white/10 tracking-tight">
           KobacHub is now Difaacsec! 🛠️
         </span>
       </div>
 
-<!-- Headline -->
-<h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center leading-tight mb-6">
-  <span class="block">Master Tech Skills That</span>
-  <span class="block font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
-</h1>
-
-
+      <!-- Headline -->
+      <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-center leading-snug mb-6">
+        <span class="block">Master Tech Skills That</span>
+        <span class="block font-normal italic text-[#D1FAE3]">Actually Get You Hired!</span>
+      </h1>
 
       <!-- Subheadline -->
       <p class="text-gray-300 text-base md:text-lg text-center mb-10 max-w-md mx-auto">
@@ -94,14 +82,7 @@
           Visit the New Difaacsec Site
         </a>
       </div>
+
     </div>
   </body>
 </html>
-
-
-
-
-
-
-
-
