Modify subheadline for clarity and focus
Updated the subheadline to emphasize job-ready skills.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <!-- Subheadline -->
       <p class="text-gray-300 text-base md:text-lg text-center mb-10 max-w-md mx-auto">
-        Hands-on Cybersecurity and Cloud training by 
+        Build Job-Ready Cybersecurity and Cloud Skills with 
         <a href="https://abdisamadjoe.com/" class="underline text-[#D1FAE3] hover:text-white transition">Abdisamad Yusuf</a>
       </p>
 
@@ -79,10 +79,11 @@
         </a>
         <a href="https://difaacsec.abdisamadjoe.com" target="_blank"
            class="px-6 py-3 rounded-xl bg-white/20 text-white font-semibold shadow hover:bg-white/30 transition text-center">
-          Visit the New Difaacsec Site
+          Visit the New DifaacSec Site
         </a>
       </div>
 
     </div>
   </body>
 </html>
+
