--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- Tagline Badge -->
       <div class="mb-8 sm:mb-10">
         <span class="inline-block text-sm sm:text-base md:text-lg font-semibold bg-white/15 text-white backdrop-blur-md rounded-2xl px-4 py-2 shadow-md border border-white/10 tracking-tight">
-          KobacHub is now Difaacsec! 🛠️
+          KobacHub is now DifaacSec! 🛠️
         </span>
       </div>
 
@@ -86,4 +86,5 @@
     </div>
   </body>
 </html>
+
 
