--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DifaacSec</title>
+<!-- SEO Meta Tags -->
+<title>Difaacsec | Learn Practical Cybersecurity & Cloud Skills with Abdisamad Yusuf</title>
+<meta name="description" content="Master job-ready Cybersecurity and Cloud skills with Difaacsec. Hands-on, practical courses created by Abdisamad Yusuf to help you build real-world expertise and launch your tech career.">
+<meta name="keywords" content="Difaacsec, cybersecurity training, learn cybersecurity, cloud computing, IT skills, ethical hacking, Linux fundamentals, Abdisamad Yusuf, online tech courses, cybersecurity Somalia, cybersecurity Africa">
+<meta name="author" content="Abdisamad Yusuf">
+<meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Open Graph (Facebook & LinkedIn) -->
+<meta property="og:title" content="Difaacsec | Learn Practical Cybersecurity & Cloud Skills with Abdisamad Yusuf">
+<meta property="og:description" content="Join Difaacsec to master hands-on cybersecurity and cloud computing skills that get you hired. Taught by Abdisamad Yusuf.">
+<meta property="og:image" content="https://kobachub.com/logo.png"> <!-- Replace with actual image URL -->
+<meta property="og:url" content="https://kobachub.com">
+<meta property="og:type" content="website">
+
+<!-- Twitter Meta -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Difaacsec | Cybersecurity & Cloud Training">
+<meta name="twitter:description" content="Learn practical cybersecurity and cloud skills with Abdisamad Yusuf through Difaacsec.">
+<meta name="twitter:image" content="https://kobachub.com/logo.png"> <!-- Replace with your course/brand image -->
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://kobachub.com/">
     <link rel="icon" href="logo.svg" type="image/png" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -86,5 +108,6 @@
     </div>
   </body>
 </html>
+
 
 
