--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <!-- SEO Meta Tags -->
-<title>Difaacsec | Learn Practical Cybersecurity & Cloud Skills with Abdisamad Yusuf</title>
+<title>Difaacsec | Learn Practical Cybersecurity & Cloud Skills </title>
 <meta name="description" content="Master job-ready Cybersecurity and Cloud skills with Difaacsec. Hands-on, practical courses created by Abdisamad Yusuf to help you build real-world expertise and launch your tech career.">
 <meta name="keywords" content="Difaacsec, cybersecurity training, learn cybersecurity, cloud computing, IT skills, ethical hacking, Linux fundamentals, Abdisamad Yusuf, online tech courses, cybersecurity Somalia, cybersecurity Africa">
 <meta name="author" content="Abdisamad Yusuf">
@@ -108,6 +108,7 @@
     </div>
   </body>
 </html>
+
 
 
 
