--- a/index.html
+++ b/index.html
@@ -165,14 +165,12 @@
         </div>
       </header>
 
-  <!-- Glassy Popup (place here, at the end of body) -->
-  <div id="popup" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-40 backdrop-blur-sm opacity-0 pointer-events-none transition-opacity duration-500">
-    <div class="bg-white/30 backdrop-blur-md rounded-xl p-6 max-w-sm text-center shadow-lg border border-white/20">
-      <h2 class="text-xl font-semibold text-white mb-2">KobacHub is now DifaacSec</h2>
-      <p class="text-white/80 mb-4">Welcome to the new experience!</p>
-      <button id="closePopup" class="px-4 py-2 bg-white/20 text-white rounded hover:bg-white/30 transition">Close</button>
-    </div>
-  </div>
+<!-- Glassy Top Popup -->
+<div id="popup" class="fixed top-4 left-1/2 transform -translate-x-1/2 w-11/12 max-w-lg bg-white/10 backdrop-blur-lg border border-white/20 rounded-xl p-6 text-center shadow-xl z-50 opacity-0 transition-opacity duration-700 pointer-events-none">
+  <h2 class="text-lg font-bold text-yellow-400 mb-2">KobacHub is now DifaacSec</h2>
+  <p class="text-white/90">Welcome to the new experience!</p>
+</div>
+
       
       <!-- HERO -->
       <main
@@ -1182,44 +1180,19 @@
     });
   });
 
-  // ===== GLASSY POPUP =====
-  // Create popup element
-  const popup = document.getElementById('popup');
-  const closeBtn = document.getElementById('closePopup');
-
-  // Show popup after page loads
+  // ===== GLASSY TOP POPUP =====
+  // Make popup visible after page load (always visible, no dismiss)
   window.addEventListener('load', () => {
+    const popup = document.getElementById('popup');
     if (popup) {
       popup.classList.remove('opacity-0', 'pointer-events-none');
-      popup.classList.add('opacity-100', 'pointer-events-auto');
-
-      // Optional: auto-dismiss after 5 seconds
-      setTimeout(() => {
-        popup.classList.add('opacity-0', 'pointer-events-none');
-        popup.classList.remove('opacity-100', 'pointer-events-auto');
-      }, 5000);
+      popup.classList.add('opacity-100');
     }
   });
-
-  // Close popup on button click
-  if (closeBtn) {
-    closeBtn.addEventListener('click', () => {
-      popup.classList.add('opacity-0', 'pointer-events-none');
-      popup.classList.remove('opacity-100', 'pointer-events-auto');
-    });
-  }
-
-  // Close popup when clicking outside the card
-  if (popup) {
-    popup.addEventListener('click', (e) => {
-      if (e.target === popup) {
-        popup.classList.add('opacity-0', 'pointer-events-none');
-        popup.classList.remove('opacity-100', 'pointer-events-auto');
-      }
-    });
-  }
 </script>
+
 
   </body>
 </html>
+
 
