--- a/index.html
+++ b/index.html
@@ -168,16 +168,19 @@
 <!-- Glassy Top Popup -->
 <div
   id="popup"
-  class="fixed top-4 left-1/2 transform -translate-x-1/2 w-11/12 max-w-lg bg-white/10 backdrop-blur-lg border border-white/20 rounded-xl p-5 text-center shadow-xl z-50 opacity-0 transition-opacity duration-700 pointer-events-none"
+  class="fixed top-4 left-1/2 -translate-x-1/2 bg-white/10 backdrop-blur-lg border border-white/20 rounded-full px-5 py-2 flex items-center gap-4 shadow-xl z-50 opacity-0 transition-opacity duration-700 pointer-events-none w-auto"
 >
-  <h2 class="text-lg font-bold text-yellow-400 mb-2">KobacHub is now DifaacSec</h2>
+  <h2 class="text-sm sm:text-base font-semibold text-yellow-400 whitespace-nowrap">
+    KobacHub is now DifaacSec
+  </h2>
   <button
     id="closePopup"
-    class="mt-1 px-4 py-2 bg-white/20 text-white rounded-lg hover:bg-white/30 transition"
+    class="text-white/90 text-sm bg-white/20 hover:bg-white/30 px-3 py-1 rounded-full transition"
   >
     Close
   </button>
 </div>
+
 
 
       
@@ -1214,6 +1217,7 @@
 
   </body>
 </html>
+
 
 
 
